--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         WWW-phpBB
-version:      0.02
-version_from: lib/WWW/phpBB.pm
-installdirs:  site
+--- #YAML:1.0
+name:               WWW-phpBB
+version:            0.03
+abstract:           phpBB2 forum scraper
+author:
+    - Stefan Talpalaru <stefantalpalaru@yahoo.com>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Compress::Zlib:                0
-    DBD::mysql:                    0
-    DBI:                           0
-    HTML::TokeParser::Simple:      0
-    WWW::Mechanize:                0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Compress::Zlib:       0
+    DBD::mysql:           0
+    DBI:                  0
+    HTML::TokeParser::Simple:  0
+    WWW::Mechanize:       0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
